--- a/public/blog.html
+++ b/public/blog.html
@@ -21,11 +21,12 @@
 </head>
 
 <body>
+
     <body id="page-top">
         <!-- Navigation -->
         <a class="menu-toggle rounded" href="">
             <div class="saddle">
-                <i class="fa fa-bars">Saddle.this</i>
+                <i class="fa fa-bars"></i>
             </div>
         </a>
         <nav id="sidebar-wrapper">
@@ -87,8 +88,8 @@
 
                 <!-- Post Content -->
                 <p class="lead text-primary">
-                    I found this blog online "Creating the Tranquil Bedroom" written by Ashley Perry which happens to feature our master
-                    bedroom when previous owners lived in our home. To learn more follow the link to the article below.
+                    I found this blog online "Creating the Tranquil Bedroom" written by Ashley Perry which happens to feature our master bedroom
+                    when previous owners lived in our home. To learn more follow the link to the article below.
                 </p>
                 <p>A tranquil bedroom. We love the idea of it. We love the promise of it. We love the reality of it. But, really,
                     how many of us actually have it? We’re guessing not too many. But, why? What gets in the way of creating
