--- a/public/contact.html
+++ b/public/contact.html
@@ -24,7 +24,7 @@
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="">
     <div class="saddle">
-      <i class="fa fa-bars">Saddle.this</i>
+      <i class="fa fa-bars"></i>
     </div>
   </a>
   <nav id="sidebar-wrapper">
@@ -71,7 +71,7 @@
         <h3 class="mb-5">
           <em>I would love to hear about your interior design story. Feel free to say hello!</em>
         </h3>
-        <a class="btn btn-dark btn-xl js-scroll-trigger" href="#contact-form">Get in Touch</a>
+        <a class="btn btn-dark btn-xl js-scroll-trigger" href="#contact-form">Contact Me</a>
       </div>
     </div>
   </section>
