--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="">
     <div class="saddle">
-      <i class="fa fa-bars">Saddle.this</i>
+      <i class="fa fa-bars"></i>
     </div>
   </a>
   <nav id="sidebar-wrapper">
@@ -93,29 +93,29 @@
           <!-- Slide 3 - View from front of the house -->
           <div class="carousel-item" style="background-image: url('https://photos.zillowstatic.com/p_f/ISyzl80j7h8d7u0000000000.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h2>Great Views</h2>
-              <h3>Features spectacular mountain views</h3>
+              <h2>Mountain</h2>
+              <h3> Views</h3>
             </div>
           </div>
           <!-- Slide 4 - View from side of the house -->
           <div class="carousel-item" style="background-image: url('http://user-images.githubusercontent.com/35505038/42071929-3eb60314-7b1b-11e8-97ee-cc3d00381d7b.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h2>Connection to Natural Surroundings</h2>
-              <h3>Designed to bring outdoors to indoor</h3>
+              <h2>Connection to</h2>
+              <h3>Natural Surroundings</h3>
             </div>
           </div>
           <!-- Slide 5 - Living room before move-in -->
           <div class="carousel-item" style="background-image: url('https://user-images.githubusercontent.com/35505038/42114447-54cb0078-7bac-11e8-8465-980737cafe6b.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h2>Inviting</h2>
+              <h2>Neutral</h2>
               <h3>Interiors</h3>
             </div>
           </div>
-          <!-- Slide 6 - Kitchen before move-in -->
+          <!-- Slide 6 - Living room before move-in -->
           <div class="carousel-item" style="background-image: url('https://user-images.githubusercontent.com/35505038/42114561-b1ef7806-7bac-11e8-9bf2-9446a54c5bf4.jpg')">
             <div class="carousel-caption d-none d-md-block">
-              <h2>Open</h2>
-              <h3>Floor Plan</h3>
+              <h2>Cozy</h2>
+              <h3>Fireplace</h3>
             </div>
           </div>
         </div>
@@ -136,10 +136,14 @@
     <div class="container ">
       <h2 class="my-4 text-center">Contemporary Mountain House with Rustic Appeal and Modern Aesthetics</h2>
       <p>
-        <strong>This is a blog site about interior design, focusing on
-          <em>Contemporary Rustic Mountain House</em> with a touch of eclectic vibe. After putting different styles together
-          in our home, there's a sense of harmony and balance in the midst of imperfections. This is my story based on personal
-          experience after buying, decorating and designing our home. I hope you enjoy the journey as much as I did!</strong>
+        This is an interior design blog for a
+        <em>Contemporary Rustic Mountain House</em> with a touch of an eclectic vibe. Take inspiration from my own personal designs,
+        and if you're feeling lost, take this
+        <a href="style.html">design style quiz</a> to uncover your personal style </a>. After doing all this and reading the blog, I'd love to
+        hear about your design story.</p>
+      <p>This site is created based on my personal experience of buying and decorating my house, as well as my passion for interior
+        design as a hobby. I believe that decorating your house should reflect your personality and lifestyle and I hope
+        you enjoy the journey of decorating your home as much as I did!
       </p>
       <div class="row ">
         <!--Architecture Icon Section -->
@@ -149,8 +153,8 @@
               alt="architecture ">
             <h4 class="card-header text-center">Architecture</h4>
             <div class="card-body ">
-              <p class="card-text">There is an art to the structure and science in the design of a custom home. This home is designed to accomodate
-                my family's active lifestyle where we can find beauty and peace in our surroundings even with our busy schedules.</p>
+              <p class="card-text">There is an art to the structure and design of a custom home. This home is designed to accommodate my family's
+                active lifestyle so we can find beauty and peace in our surroundings despite our busy schedules.</p>
             </div>
             <div class="card-footer ">
               <a href="https://user-images.githubusercontent.com/35505038/42371843-deacfb9a-80cd-11e8-9f44-61714073ceef.jpg" class="btn btn-primary">Learn More</a>
@@ -164,8 +168,8 @@
               alt="home decor ">
             <h4 class="card-header text-center">Home Decor</h4>
             <div class="card-body ">
-              <p class="card-text ">This home is designed by finding special furnitures, arts or collections that makes it feel authentic. It is
-                mixed with different styles, colors, textures and artwork that invokes meaning and personality.
+              <p class="card-text ">My home is designed in an eclectic fashion with all different kinds of styles, colors, textures, and artwork
+                that invoke meaning and personality.
               </p>
             </div>
             <div class="card-footer ">
@@ -180,9 +184,9 @@
               alt="outdoor space ">
             <h4 class="card-header text-center">Outdoor Space</h4>
             <div class="card-body ">
-              <p class="card-text ">The exterior space is designed to bring nature into the home and is an extension of the surrounding architecture
-                and natural beauty of the environment. Being so close to nature, means we may get occasional visits from
-                deers, bears and mountain lions.
+              <p class="card-text ">Our landscape is designed to bring nature into my home and is an extension of the surrounding architecture
+                and natural beauty of the environment. Being so close to nature means we may get occasional visits from a
+                deer, bear and mountain lion.
               </p>
             </div>
             <div class="card-footer ">
@@ -206,7 +210,7 @@
       <div class="row no-gutters">
         <!-- Portfolio: #1 Stairs, Art, Collections  -->
         <div class="col-lg-6">
-          <a class="portfolio-item" href="img/fullsize/1.jpg">
+          <a class="portfolio-item" href="interior-whimsy.html">
             <img class="img-fluid" src="img/thumbnails/1.jpg" alt="whimsy designs">
             <span class="caption">
               <span class="caption-content">
@@ -218,7 +222,7 @@
         </div>
         <!-- Portfolio: #2 Living Room, Kitchen, Formal Dining Room -->
         <div class="col-lg-6">
-          <a class="portfolio-item" href="img/fullsize/2.jpg">
+          <a class="portfolio-item" href="interior-gathering.html">
             <img class="img-fluid" src="img/thumbnails/2.jpg" alt="gathering rooms">
             <span class="caption">
               <span class="caption-content">
@@ -230,19 +234,19 @@
         </div>
         <!-- Portfolio: #3 Master, Bath, Office -->
         <div class="col-lg-6">
-          <a class="portfolio-item" href="img/fullsize/3.jpg">
+          <a class="portfolio-item" href="interior-sanctuary.html">
             <img class="img-fluid" src="img/thumbnails/3.jpg" alt="sanctuary rooms">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOMS</h2>
-                <p class="mb-0">Master Bedroom, Master Bath & Office</p>
+                <p class="mb-0">Master Bedroom & Master Bath</p>
               </span>
             </span>
           </a>
         </div>
         <!-- Portfolio: #4 Kids Wing -->
         <div class="col-lg-6">
-          <a class="portfolio-item" href="img/fullsize/4.jpg">
+          <a class="portfolio-item" href="interior-kids-wing.html">
             <img class="img-fluid" src="img/thumbnails/4.jpg" alt="kids wing">
             <span class="caption">
               <span class="caption-content">
@@ -254,7 +258,7 @@
         </div>
         <!-- Portfolio: #5 Theater, Wine, Gym, Sauna -->
         <div class="col-lg-6">
-          <a class="portfolio-item" href="img/fullsize/5.jpg">
+          <a class="portfolio-item" href="interior-d-lounge.html">
             <img class="img-fluid" src="img/thumbnails/5.jpg" alt="d lounge">
             <span class="caption">
               <span class="caption-content">
@@ -266,7 +270,7 @@
         </div>
         <!-- Portfolio: #6 Outdoors -->
         <div class="col-lg-6">
-          <a class="portfolio-item" href="img/fullsize/6.jpg">
+          <a class="portfolio-item" href="interior-escape-nature.html">
             <img class="img-fluid" src="img/thumbnails/6.jpg" alt="Escape to Nature">
             <span class="caption">
               <span class="caption-content">
