--- a/public/interior-d-lounge.html
+++ b/public/interior-d-lounge.html
@@ -22,7 +22,7 @@
 <body id="page-top" class="dlounge-background">
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="index.html">
-        <i class="fa fa-bars">Saddle.this
+        <i class="fa fa-bars">
         </i>
     </a>
     <nav id="sidebar-wrapper">
@@ -60,80 +60,127 @@
         </ul>
     </nav>
 
-    <!-- Header Escape to Nature -->
+    <!-- Header D-lounge -->
     <section class="content-section" id="dlounge-header">
         <div class="container text-center">
             <div class="col-lg-10 mx-auto">
-                <h1 class="text-secondary">D-Lounge</h1>
-                <h2 class=" mb-5 text-light">
+                <h1 class="text-light">D-Lounge</h1>
+                <h2 class=" mb-5 text-light">Workout, relax, watch a movie, drink wine and repeat.
                 </h2>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#dlounge-portfolio">Get D-Lounge Designs</a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger" href="#dlounge-portfolio">Get D-Lounge Interior Designs</a>
             </div>
         </div>
     </section>
 
     <!-- Interior Design Section -->
-    <div id="">
-        <section class="content-section " id="dlounge-portfolio">
-            <div class="container">
-                <div class="content-section-heading text-center">
-                    <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5 text-light">D-Lounge Designs</h2>
+    <section class="content-section " id="dlounge-portfolio">
+        <div class="container">
+            <div class="content-section-heading text-center">
+                <h3 class="text-secondary mb-0">Portfolio</h3>
+                <h2 class="mb-5 text-dark">D-Lounge Interior Designs</h2>
+            </div>
+
+            <div class="row no-gutters">
+                <!-- Portfolio: #1 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/37.jpg">
+                        <img class="img-fluid" src="img/thumbnails/37.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Theater Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #2 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/26.jpg">
+                        <img class="img-fluid" src="img/thumbnails/26.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Kitchen Theater</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #3 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/38.jpg">
+                        <img class="img-fluid" src="img/thumbnails/38.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Wine Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #4 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/27.jpg">
+                        <img class="img-fluid" src="img/thumbnails/27.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Wine Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #5  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/29.jpg">
+                        <img class="img-fluid" src="img/thumbnails/29.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Sauna Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #6  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/8.jpg">
+                        <img class="img-fluid" src="img/thumbnails/8.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Steam Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #7  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/39.jpg">
+                        <img class="img-fluid" src="img/thumbnails/39.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Home Gym</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #8  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/40.jpg">
+                        <img class="img-fluid" src="img/thumbnails/40.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>D-Lounge</h2>
+                                <p class="mb-0">Home Gym</p>
+                            </span>
+                        </span>
+                    </a>
                 </div>
 
-                <div class="row no-gutters">
-                    <!-- Portfolio: #1 -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/26.jpg">
-                            <img class="img-fluid" src="img/thumbnails/26.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>D-Lounge</h2>
-                                    <p class="mb-0">Kitchen Theater</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #2 -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/27.jpg">
-                            <img class="img-fluid" src="img/thumbnails/27.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>D-Lounge</h2>
-                                    <p class="mb-0">Wine Room</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #3  -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/28.jpg">
-                            <img class="img-fluid" src="img/thumbnails/28.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>D-Lounge</h2>
-                                    <p class="mb-0">Home Gym</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #4  -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/29.jpg">
-                            <img class="img-fluid" src="img/thumbnails/29.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>D-Lounge</h2>
-                                    <p class="mb-0">Sauna Room</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -172,4 +219,3 @@
 </body>
 
 </html>
-
