--- a/public/interior-escape-nature.html
+++ b/public/interior-escape-nature.html
@@ -22,7 +22,7 @@
 <body id="page-top" class="escape-background">
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="index.html">
-        <i class="fa fa-bars">Saddle.this
+        <i class="fa fa-bars">
         </i>
     </a>
     <nav id="sidebar-wrapper">
@@ -64,10 +64,10 @@
     <section class="content-section" id="escape-header">
         <div class="container text-center">
             <div class="col-lg-10 mx-auto">
-                <h1 class="text-secondary">Escape-to-Nature</h1>
+                <h1 class="text-light">Escape-to-Nature</h1>
                 <h2 class=" mb-5 text-light">Bringing the Outdoors In
                 </h2>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#escape-portfolio">Get Escape Designs</a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger" href="#escape-portfolio">Get Escape-to-Nature Interior Designs</a>
             </div>
         </div>
     </section>
@@ -78,35 +78,12 @@
             <div class="container">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Escape-to-Nature Designs</h2>
+                    <h2 class="mb-5">Escape-to-Nature Interior Designs</h2>
                 </div>
 
                 <div class="row no-gutters">
-                    <!-- Portfolio: #1 -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/22.jpg">
-                            <img class="img-fluid" src="img/thumbnails/22.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>Escape-to-Nature</h2>
-                                    <p class="mb-0">View from Patio</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #2 -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/23.jpg">
-                            <img class="img-fluid" src="img/thumbnails/23.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>Escape-to-Nature</h2>
-                                    <p class="mb-0">Snow View</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #3  -->
+
+                    <!-- Portfolio: #1  -->
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="img/fullsize/24.jpg">
                             <img class="img-fluid" src="img/thumbnails/24.jpg" alt="">
@@ -118,7 +95,7 @@
                             </span>
                         </a>
                     </div>
-                    <!-- Portfolio: #4  -->
+                    <!-- Portfolio: #2  -->
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="img/fullsize/25.jpg">
                             <img class="img-fluid" src="img/thumbnails/25.jpg" alt="">
@@ -130,6 +107,55 @@
                             </span>
                         </a>
                     </div>
+                    <!-- Portfolio: #3 -->
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="img/fullsize/41.jpg">
+                            <img class="img-fluid" src="img/thumbnails/41.jpg" alt="">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h2>Escape-to-Nature</h2>
+                                    <p class="mb-0">Front Patio</p>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <!-- Portfolio: #4 -->
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="img/fullsize/6.jpg">
+                            <img class="img-fluid" src="img/thumbnails/6.jpg" alt="">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h2>Escape-to-Nature</h2>
+                                    <p class="mb-0">Side Patio</p>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <!-- Portfolio: #5 -->
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="img/fullsize/22.jpg">
+                            <img class="img-fluid" src="img/thumbnails/22.jpg" alt="">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h2>Escape-to-Nature</h2>
+                                    <p class="mb-0">View from Patio</p>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <!-- Portfolio: #5 -->
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="img/fullsize/23.jpg">
+                            <img class="img-fluid" src="img/thumbnails/23.jpg" alt="">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h2>Escape-to-Nature</h2>
+                                    <p class="mb-0">Snow View</p>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </section>
