--- a/public/interior-gathering.html
+++ b/public/interior-gathering.html
@@ -22,7 +22,7 @@
 <body id="page-top" class="gathering-background">
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="index.html">
-        <i class="fa fa-bars">Saddle.this
+        <i class="fa fa-bars">
         </i>
     </a>
     <nav id="sidebar-wrapper">
@@ -64,76 +64,146 @@
     <section class="content-section" id="gathering-header">
         <div class="container text-center">
             <div class="col-lg-10 mx-auto">
-                <h1 class="text-dark">Gather Designs</h1>
+                <h1 class="text-dark">Gathering Room Designs</h1>
                 <h2 class=" mb-5 text-dark">A Space to Share Special Moments
                 </h2>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#gather-portfolio">Get Gather Designs</a>
+                <a class="btn btn-dark btn-xl js-scroll-trigger" href="#gather-portfolio">Get Gathering Rooms Interior Designs</a>
             </div>
         </div>
     </section>
 
     <!-- Interior Design Section -->
-    <div id="">
-        <section class="content-section " id="gather-portfolio">
-            <div class="container">
-                <div class="content-section-heading text-center">
-                    <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Gathering Rooms Designs</h2>
-                </div>
+    <section class="content-section " id="gather-portfolio">
+        <div class="container text-center">
+            <div class="content-section-heading text-center">
+                <h3 class="text-secondary mb-0">Portfolio</h3>
+                <h2 class="mb-5">Gathering Rooms Interior Designs</h2>
+            </div>
 
-                <div class="row no-gutters">
-                    <!-- Portfolio: #1 -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/18.jpg">
-                            <img class="img-fluid" src="img/thumbnails/18.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>Gathering Rooms</h2>
-                                    <p class="mb-0">Living Room</p>
-                                </span>
+            <div class="row no-gutters">
+                <!-- Portfolio: #1 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/32.jpg">
+                        <img class="img-fluid" src="img/thumbnails/32.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Living Room</p>
                             </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #2 -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/19.jpg">
-                            <img class="img-fluid" src="img/thumbnails/19.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>Gathering Rooms</h2>
-                                    <p class="mb-0">The Counter</p>
-                                </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #2 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/18.jpg">
+                        <img class="img-fluid" src="img/thumbnails/18.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Living Room</p>
                             </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #3  -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/20.jpg">
-                            <img class="img-fluid" src="img/thumbnails/20.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>Gathering Rooms</h2>
-                                    <p class="mb-0">Kitchen</p>
-                                </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #3 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/19.jpg">
+                        <img class="img-fluid" src="img/thumbnails/19.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Kitchen</p>
                             </span>
-                        </a>
-                    </div>
-                    <!-- Portfolio: #4  -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/21.jpg">
-                            <img class="img-fluid" src="img/thumbnails/21.jpg" alt="">
-                            <span class="caption">
-                                <span class="caption-content">
-                                    <h2>Gathering Rooms</h2>
-                                    <p class="mb-0">Dining Room</p>
-                                </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #4  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/20.jpg">
+                        <img class="img-fluid" src="img/thumbnails/20.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Kitchen</p>
                             </span>
-                        </a>
-                    </div>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #5 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/33.jpg">
+                        <img class="img-fluid" src="img/thumbnails/33.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Breakfast Nook</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #6 -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/30.jpg">
+                        <img class="img-fluid" src="img/thumbnails/30.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Breakfast Nook</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #7  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/21.jpg">
+                        <img class="img-fluid" src="img/thumbnails/21.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Dining Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #8  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/31.jpg">
+                        <img class="img-fluid" src="img/thumbnails/31.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Dining Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #9  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/47.jpg">
+                        <img class="img-fluid" src="img/thumbnails/47.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Great Room</p>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+                <!-- Portfolio: #10  -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href="img/fullsize/48.jpg">
+                        <img class="img-fluid" src="img/thumbnails/48.jpg" alt="">
+                        <span class="caption">
+                            <span class="caption-content">
+                                <h2>Gathering Rooms</h2>
+                                <p class="mb-0">Great Room</p>
+                            </span>
+                        </span>
+                    </a>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer text-center">
