--- a/public/interior-sanctuary.html
+++ b/public/interior-sanctuary.html
@@ -22,7 +22,7 @@
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="">
     <div class="saddle">
-      <i class="fa fa-bars">Saddle.this</i>
+      <i class="fa fa-bars"></i>
     </div>
   </a>
   <nav id="sidebar-wrapper">
@@ -65,11 +65,11 @@
   <section class="content-section" id="sanctuary">
     <div class="container text-center">
       <div class="col-lg-10 mx-auto">
-        <h1 class="mb-1">Sanctuary Rooms</h1>
-        <h3 class="mb-5">
-          <em>My Designs & Color Inspiration</em>
-        </h3>
-        <a class="btn btn-dark btn-xl js-scroll-trigger" href="#rh">Color my Bookcase & Collections</a>
+        <h1 class="text-dark">Sanctuary Rooms</h1>
+        <h2 class="mb-5 text-dark">
+          Design & Color Inspiration
+        </h2>
+        <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio-sanctuary">Get Sanctuary Interior Designs</a>
       </div>
     </div>
   </section>
@@ -85,12 +85,14 @@
             </a>
           </div>
           <div class="col-md-4">
+            <h3 class="my-3 text-center">Design Inspiration</h3>
+            <p> I love mixing classic and moderns designs such as putting together a bookcase from RH with motivational art from
+              Etsy or a vase from West Elm. </p>
             <h3 class="my-3 text-center">Color Inspiration</h3>
-            <p>I love mixing classic designs including a bookcase from RH and incorporating collections of modern items such
-              as motivational art from Etsy and a vase from West Elm. I especially adore the Zen Contemporary look and use
-              earthy-neutral colors with a pop of bright colors to add more dimension and interest througout my home.</p>
-            <p> Using various colors in your design invokes different feelings and sets a mood. Have fun with colors and use
-              it to create an ambiance that makes you feel great!</p>
+            <p>I like the Zen Contemporary look which keeps the house neutral but I love to add in a pop of bright color to
+              add more dimension and interest.</p>
+            <p> By using various colors in my design, it invokes different feelings and sets a mood. Remember to have fun with
+              colors and use it to create an ambiance in your home that makes you feel great!</p>
             <br>
             <h3 class="my- text-center">Get the Look</h3>
             <a href="https://www.restorationhardware.com/catalog/product/product.jsp?productId=prod3170348&categoryId=cat1850056" class="btn btn-dark"
@@ -112,7 +114,11 @@
     <div class="my-4 text-center">
       <h2 class="mx-auto mb-5">Select a Color
         <em>& React</em>
+        <h5>Play around with colors down below to see all the different ways you can mix and match.
+          <em>Color changes powered by React.</em>
+        </h5>
       </h2>
+      <br>
       <div class="row">
         <!-- Restoration hardware media cabinet -->
         <div class="col-md-3 col-sm-6 mb-4 bookcase-items">
@@ -147,64 +153,60 @@
   <!-- Interior Design Section -->
   <section class="content-section" id="portfolio-sanctuary">
     <div class="container">
-
       <div class="content-section-heading text-center">
         <h3 class="text-secondary mb-0">Portfolio</h3>
         <h2 class="mb-5">Sanctuary Interior Designs</h2>
       </div>
 
       <div class="row no-gutters">
-
         <!-- Portfolio: #1 -->
-        <div class="col-lg-10">
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="img/fullsize/36.jpg">
+            <img class="img-fluid" src="img/thumbnails/36.jpg" alt="sanctuary rooms">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>SANCTUARY ROOM</h2>
+                <p class="mb-0">Master Bedroom</p>
+              </span>
+            </span>
+          </a>
+        </div>
+        <!-- Portfolio: #2 -->
+        <div class="col-lg-6">
           <a class="portfolio-item" href="img/fullsize/3.jpg">
             <img class="img-fluid" src="img/thumbnails/3.jpg" alt="sanctuary rooms">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0"></p>
+                <p class="mb-0">Master Bedroom</p>
               </span>
             </span>
           </a>
         </div>
-        <!-- Portfolio: #2   -->
-        <div class="col-lg-10">
+        <!-- Portfolio: #3   -->
+        <div class="col-lg-6">
           <a class="portfolio-item" href="img/fullsize/7.jpg">
             <img class="img-fluid" src="img/thumbnails/7.jpg" alt="rh media system">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0"></p>
+                <p class="mb-0">Master Bath</p>
               </span>
             </span>
           </a>
         </div>
-        <!-- Portfolio: #3 -->
-        <div class="col-lg-10">
+        <!-- Portfolio: #4 -->
+        <div class="col-lg-6">
           <a class="portfolio-item" href="img/fullsize/8.jpg">
             <img class="img-fluid" src="img/thumbnails/8.jpg" alt="goethe art">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0"></p>
+                <p class="mb-0">Master Bath</p>
               </span>
             </span>
           </a>
         </div>
-
-        <!-- Portfolio: #4 -->
-        <div class="col-lg-10">
-          <a class="portfolio-item" href="img/fullsize/9.jpg">
-            <img class="img-fluid" src="img/thumbnails/9.jpg" alt="yellow vase">
-            <span class="caption">
-              <span class="caption-content">
-                <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0"></p>
-              </span>
-            </span>
-          </a>
-        </div>
-
       </div>
 
     </div>
