--- a/public/style.html
+++ b/public/style.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="">
       <div class="saddle">
-        <i class="fa fa-bars">Saddle.this</i>
+        <i class="fa fa-bars"></i>
       </div>
     </a>
     <nav id="sidebar-wrapper">
@@ -64,8 +64,11 @@
     <section class="style-main">
       <div class="container">
         <h2 class="mt-4 mb-3 text-center">What's Your Personality Design Style?</h2>
-        <h3 class="mt-4 mb-3 text-center">The decor in our home reflects our personality. If you're thinking about decorating your house, a good starting point
-          is to learn about different design styles. Find out what style complements your personality by taking a quiz.
+        <h3 class="mt-4 mb-3 text-center">The decor in our home reflects all of our individual personalities. If you're thinking about decorating your house,
+          a good starting point is to learn about different design styles. Find out what style complements your personality
+          by taking a quiz.
+          <br>
+          <br>
           <a class="btn btn-dark btn-xl js-scroll-trigger text-center" href="#style-modal-header-btn">Find Out More</a>
         </h3>
       </div>
