--- a/public/about.html
+++ b/public/about.html
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="">
     <div class="saddle">
-      <i class="fa fa-bars">Saddle.this</i>
+      <i class="fa fa-bars"></i>
     </div>
   </a>
   <nav id="sidebar-wrapper">
@@ -64,15 +64,6 @@
     </ul>
   </nav>
 
-  <div id="fb-root"></div>
-  <script>(function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
   <!-- Header About -->
   <section class="content-section" id="about-me-header">
     <div class="container text-center">
@@ -94,20 +85,20 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
+              <img src="img/fullsize/cris.jpg" alt="Cristina Defoe" id="about-image">
               <span class="section-heading-upper">Hello!</span>
               <span class="section-heading-lower">It's nice to meet you.</span>
             </h2>
-            <p> My name is Cristina Defoe. I'm from Bay Area, California and recently moved to Colorado. I have an 18 year old
-              daughter who just finished her freshman year in college at UC Boulder, majoring in engineering and business
-              and a 12 year old son who is an avid golf and video game player.</p>
-            <p>While living in Silicon Valley, I worked as a Sales Development Manager at Philips Lumileds. I received a much
-              needed break after moving to Colorado and spent the last year pursuing my other passion
-              <em>interior design.</em> I love the creative process, ability to express myself artistically and technical aspect
-              when it comes to decorating a house.</p>
+            <p> My name is Cristina Defoe. I'm from the Bay Area and recently moved to Colorado. I have an 18-year-old daughter
+              who just finished her freshman year in college at CU Boulder while majoring in engineering, and a 13 year old
+              son who is an avid golf and video game player.</p>
+            <p>While living in Silicon Valley, I worked as a Sales Development Manager at Philips Lumileds. I received a much-needed
+              break after moving to Colorado and spent the last year pursuing a hobby of mine which is
+              <em>interior design.</em> I love the creative process, the ability to express myself artistically, and the technical
+              aspect which comes with decorating a house.</p>
 
-            <p>I hope that my site will inspire you to decorate your space and wish for you a life surrounded with beauty, peace
-              and happiness.</p>
-            <p>I leave you with a quote that inspires me to dream big, think outside the box and live life to the fullest.</p>
+            <p>I hope that my site will inspire you to decorate and create a space surrounded by beauty, peace, and happiness.</p>
+            <p>I leave you with a quote that inspires me to dream big, think outside the box, and live life to the fullest.</p>
             </p>Thanks for stopping by!</p>
           </div>
         </div>
@@ -119,96 +110,75 @@
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="https://user-images.githubusercontent.com/35505038/42551236-82299724-8493-11e8-8c6d-4dd4999b3547.jpg"
-          alt="">
+          alt="family picture">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Whatever you think you can do, or dream you can do, begin it. BOLDNESS HAS GENIUS, POWER, AND MAGIC IN IT.</span>
             <span class="section-heading-upper">~Goethe</span>
           </h2>
-          <!-- FB like button code -->
-          <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-layout="standard" data-action="like"
-            data-size="small" data-show-faces="true" data-share="true"></div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Favorite Design Partner -->
-  <section class="page-section">
+  <section class="page-section clearfix">
     <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-lower">Fav Design Partner</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://user-images.githubusercontent.com/35505038/42549615-4da4482c-848a-11e8-8f54-250f8b984cd5.jpg"
-          alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Buying and designing our dream home has been an amazing experience and I feel fortunate to have this opportunity.
-              I'm eternally grateful to my husband who spoils me everyday.</p>
-
-            <!-- FB like button code -->
-            <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-layout="standard" data-action="like"
-              data-size="large" data-show-faces="true" data-share="true"></div>
-
-            <h5 class="card-header">Leave a Comment:</h5>
-            <!-- FB Comments Form -->
-            <div class="fb-comments" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-numposts="10"></div>
-
-          </div>
+      <div class="intro">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="https://photos.zillowstatic.com/p_f/ISa5qgl8ovdr6s1000000000.jpg"
+          alt="picture of house">
+        <div class="intro-text left-0 text-center bg-faded p-5 rounded ">
+          <h6>Buying and designing my dream house with my husband has been an amazing experience and I feel fortunate to have
+            this opportunity.
+          </h6>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
   <!-- Map -->
-  <section id="contact" class="map" id="map">
-    <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Restoration+Hardware,+Inc.,+Denver,+Castle+Rock,+CO&amp;aq=0&amp;oq=twitter&amp;sll=39.718597,-104.951742&amp;sspn=— 39.715899,-104.95444 Place ID: ChIJp-GCKpd-bIcR3Qaxq9cE134
-  amp;ie=UTF8&amp;hq=Restoration,+Inc.,+Denver,+Castle+Rock,+CO&amp;aq=0&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+  <section id="contact " class="map " id="map ">
+    <iframe width="100% " height="100% " frameborder="0 " scrolling="no " marginheight="0 " marginwidth="0 " src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Restoration+Hardware,+Inc.,+Denver,+Castle+Rock,+CO&amp;aq=0&amp;oq=twitter&amp;sll=39.718597,-104.951742&amp;sspn=—
+          39.715899,-104.95444 Place ID: ChIJp-GCKpd-bIcR3Qaxq9cE134 amp;ie=UTF8&amp;hq=Restoration,+Inc.,+Denver,+Castle+Rock,+CO&amp;aq=0&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed "></iframe>
     <br/>
     <small>
-      <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Restoration+Hardware,+Inc.,+Denver,+Castle+Rock,+CO&amp;aq=0&amp;oq=Restoration+Hardware&amp;39.718597,-104.951742;sspn=— 39.715899,-104.95444&amp;ie=UTF8&amp;hq=Restoration+Hardware,+Inc.,+Castle+Rock,+Denver,+CO&amp;t=m&amp;z=15&amp;iwloc=A"></a>
+      <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Restoration+Hardware,+Inc.,+Denver,+Castle+Rock,+CO&amp;aq=0&amp;oq=Restoration+Hardware&amp;39.718597,-104.951742;sspn=—
+          39.715899,-104.95444&amp;ie=UTF8&amp;hq=Restoration+Hardware,+Inc.,+Castle+Rock,+Denver,+CO&amp;t=m&amp;z=15&amp;iwloc=A "></a>
     </small>
   </section>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center ">
     <div class="container ">
-      <ul class="list-inline mb-5">
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3  text-center" href="#">
-            <i class="icon-social-facebook"></i>
+      <ul class="list-inline mb-5 ">
+        <li class="list-inline-item ">
+          <a class="social-link rounded-circle text-white mr-3 text-center " href="# ">
+            <i class="icon-social-facebook "></i>
           </a>
         </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3 text-center" href="https://github.com/cristinadefoe">
-            <i class="icon-social-github"></i>
+        <li class="list-inline-item ">
+          <a class="social-link rounded-circle text-white mr-3 text-center " href="https://github.com/cristinadefoe ">
+            <i class="icon-social-github "></i>
           </a>
         </li>
-        <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3 text-center" href="https://www.linkedin.com/in/cristina-defoe">
-            <i class="icon-social-linkedin"></i>
+        <li class="list-inline-item ">
+          <a class="social-link rounded-circle text-white mr-3 text-center " href="https://www.linkedin.com/in/cristina-defoe ">
+            <i class="icon-social-linkedin "></i>
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Saddle.this 2018</p>
+      <p class="text-muted small mb-0 ">Copyright &copy; Saddle.this 2018</p>
     </div>
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery/jquery.min.js "></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js "></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/stylish-portfolio.min.js"></script>
+  <script src="js/stylish-portfolio.min.js "></script>
 
 </body>
 
