--- a/public/interior-whimsy.html
+++ b/public/interior-whimsy.html
@@ -27,7 +27,7 @@
 <body id="page-top" class="whimsy-background">
     <!-- Navigation -->
     <a class="menu-toggle rounded" href="index.html">
-        <i class="fa fa-bars">Saddle.this
+        <i class="fa fa-bars">
         </i>
     </a>
     <nav id="sidebar-wrapper">
@@ -65,28 +65,20 @@
         </ul>
     </nav>
 
-    <div id="fb-root"></div>
-    <script>(function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-
     <!-- Header Whimsy -->
     <section class="content-section" id="whimsy-header">
         <div class="container text-center">
             <div class="col-lg-10 mx-auto">
-                <h1 class="text-light">Whimsy Designs</h1>
-                <h2 class=" mb-5 text-secondary">Where Old World Rustic-Meets-Asian-African Arts & Collections
+                <h1 class="text-primary">Whimsy Designs</h1>
+                <h2 class="mb-5 text-primary">
+                    Old World Rustic-Meets-Asian-African Arts
                 </h2>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#fancy">Get Whimsical Designs</a>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" id="whimsy-button" href="#fancy">Get Whimsical Interior Designs</a>
             </div>
         </div>
     </section>
 
-    <section class=" page-section about-heading">
+    <section class=" page-section about-heading spiral-staircase">
         <!-- Page Content -->
         <div class="container">
             <div class="row">
@@ -98,12 +90,10 @@
                         <div class="row">
                             <div class="col-xl-9 col-lg-10 mx-auto">
                                 <div class="bg-faded rounded p-5">
-                                    <h2 class="section-heading mb-4">
-                                        <span class="section-heading-upper">This is one of my favorite part of the house. Love the architecture and elegant yet
-                                            rustic touch.
-                                        </span>
-                                        <span class="section-heading-lower">Spiral Staircase</span>
-                                    </h2>
+                                    <h2 class="section-heading mb-4"> Spiral Staircase</h2>
+                                    <h5>The spiral staircase is one of my favorite parts of my house. I love the architecture
+                                        and the elegant yet rustic touch.
+                                    </h5>
                                 </div>
                             </div>
                         </div>
@@ -113,30 +103,9 @@
                 <!-- Sidebar Widgets Column -->
                 <div class="col-md-4">
 
-                    <!-- Search -->
-                    <div class="card mb-4">
-                        <h5 class="card-header text-center">Search</h5>
-                        <div class="card-body">
-                            <div class="input-group">
-                                <div id="search">
-                                    <input type="text" placeholder="filter by search" id="filter-search">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-secondary" type="button">Go!</button>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="gallery">
-                        <img src="img/fullsize/14.jpg" , data-tags="Decor, Interior" alt="Red Door" />
-                        <img src="img/fullsize/15.jpg" , data-tags="Decor, Interior" alt="Terracota Vase">
-                        <img src="img/fullsize/16.jpg" , data-tags="Decor, Interior" alt="Banana Plant">
-                        <img src="img/fullsize/17.jpg" , data-tags="Decor, Interior" alt="Artificial Banana Plant">
-                    </div>
-
                     <!-- Favorite Decor and Furnishings Link -->
-                    <div class="card my-4">
-                        <h5 class="card-header text-center">Fav Decor & Furnishing</h5>
+                    <div class="card my-4 border-dark">
+                        <h5 class="card-header bg-primary text-center text-light">My Favorite Decor & Furnishing</h5>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-lg-6">
@@ -182,22 +151,22 @@
                     </div>
 
                     <!-- ToDo List -->
-                    <div class="card my-4">
-                        <h5 class="card-header">Add Your To-Do Style List</h5>
+                    <div class="card my-4 border-dark">
+                        <h5 class="card-header bg-primary text-center text-light">Add Your To-Do Style List</h5>
                         <div class="card-body">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-md-6 offset-md-3">
+                                    <div class="col-md-10 offset-md-3 ">
                                         <ul class="list-group todo-list">
-                                            <li class="list-group-item new-item">
+                                            <li class="list-group-item new-item  border-dark">
                                                 <form id="todo-form">
                                                     <div class="container">
                                                         <div class="row">
-                                                            <div class="col-20">
-                                                                <input class="new-item form-control" placeholder="Add a todo" type="text" />
+                                                            <div class="col-30">
+                                                                <input class="new-item form-control border-dark" placeholder="Add To-Do List" type="text" />
                                                             </div>
                                                             <div class="col-4">
-                                                                <button type="submit" class="btn btn-primary" id="todoButton">Add Todo</button>
+                                                                <button type="submit" class="btn btn-primary" id="todoButton">Submit</button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -227,22 +196,10 @@
                     <div class="col-xl-9 col-lg-10 mx-auto">
                         <div class="bg-faded rounded p-5">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">Colorful Zebra </span>
-                                <span class="section-heading-upper">
-                                    <em>Fun Fact: Each zebra stripes are as unique as finger prints, no two are exactly alike.
-                                        Similarly, when decorating your home make it unique to your lifesttyle and surround
-                                        yourself only with things that you love!
-                                    </em>
-                                </span>
-                                <!-- <span class="section-heading-lower">~Goethe</span> -->
-                            </h2>
-
-                            <!-- FB like -->
-                            <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/interior-whimsy.html" data-layout="standard" data-action="like"
-                                data-size="large" data-show-faces="true" data-share="true"></div>
-
-                            <!-- FB comments -->
-                            <div class="fb-comments" data-href="https://guarded-depths-83548.herokuapp.com/interior-whimsy.html" data-numposts="10"></div>
+                                Colorful Zebra</h2>
+                            <h5>Fun Fact: Each of the zebras stripes are as unique as fingerprints, no two are exactly alike.
+                                Similarly, when decorating your home make it unique to things that you love!
+                            </h5>
                         </div>
                     </div>
                 </div>
@@ -256,12 +213,12 @@
             <div class="container">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Whimsical Designs</h2>
+                    <h2 class="mb-5 text-dark">Whimsical Interior Designs</h2>
                 </div>
 
                 <div class="row no-gutters">
                     <!-- Portfolio: #1 -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <a class="portfolio-item" href="img/fullsize/14.jpg">
                             <img class="img-fluid" src="img/thumbnails/14.jpg" alt="Red Door">
                             <span class="caption">
@@ -273,7 +230,7 @@
                         </a>
                     </div>
                     <!-- Portfolio: #2 -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <a class="portfolio-item" href="img/fullsize/15.jpg">
                             <img class="img-fluid" src="img/thumbnails/15.jpg" alt="Terracota Vase">
                             <span class="caption">
@@ -285,21 +242,46 @@
                         </a>
                     </div>
                     <!-- Portfolio: #3  -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <a class="portfolio-item" href="img/fullsize/16.jpg">
                             <img class="img-fluid" src="img/thumbnails/16.jpg" alt="Banana Plant">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h2>Whimsy Design</h2>
-                                    <p class="mb-0">Orange & Banana</p>
+                                    <p class="mb-0">Modern Tropical: Orange & Banana</p>
                                 </span>
                             </span>
                         </a>
                     </div>
                     <!-- Portfolio: #4  -->
-                    <div class="col-lg-6">
-                        <a class="portfolio-item" href="img/fullsize/17.jpg">
-                            <img class="img-fluid" src="img/thumbnails/17.jpg" alt="Artificial Banana Plant">
+                    <div class="col-lg-5">
+                        <a class="portfolio-item" href="img/fullsize/46.jpg">
+                            <img class="img-fluid" src="img/thumbnails/46.jpg" alt="decoration">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h2>Whimsy Design</h2>
+                                    <p class="mb-0">Contemporary African Art</p>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <!-- Portfolio: #5  -->
+                    <div class="col-lg-5">
+                        <a class="portfolio-item" href="img/fullsize/35.jpg">
+                            <img class="img-fluid" src="img/thumbnails/35.jpg" alt="decoration">
+                            <span class="caption">
+                                <span class="caption-content">
+                                    <h2>Whimsy Design</h2>
+                                    <p class="mb-0">
+                                        Zen Zone</p>
+                                </span>
+                            </span>
+                        </a>
+                    </div>
+                    <!-- Portfolio: #6  -->
+                    <div class="col-lg-5">
+                        <a class="portfolio-item" href="img/fullsize/44.jpg">
+                            <img class="img-fluid" src="img/thumbnails/44.jpg" alt="decoration">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h2>Whimsy Design</h2>
@@ -314,25 +296,27 @@
     </div>
 
     <!-- Blog Section -->
-    <section class="content-section bg-primary text-primary text-center" id="whimsy-blog-img">
+    <section class="content-section text-center bg-secondary" id="whimsy-blog-img">
         <div class="row">
             <div class="col-lg-6">
-                <img class="img-fluid rounded " src="https://user-images.githubusercontent.com/35505038/42584704-0fc4a3f0-84f1-11e8-8287-8b268eba3ec3.jpg"
-                    alt="White Vase">
+                <img class="img-fluid rounded" src="https://user-images.githubusercontent.com/35505038/43671245-a0181896-9753-11e8-871b-31451069bbff.jpg"
+                    alt="vase">
             </div>
-            <div class="col-lg-6 text-center">
+
+            <div class="text-dark text-center col-lg-4">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0">My Thoughts</h3>
-                    <h2 class="mb-5 text-dark">Design Challenge</h2>
+                    <h3 class="text-secondary mb-0 text-center">My Thoughts</h3>
+                    <h2 class="mb-5  text-center">Design Challenge</h2>
                 </div>
-                <h2 class="lead text-dark"> Before moving to Colorado, we had Asian and African arts in our home in California. It made sense then the
-                    way our house was designed - there was a good flow. The challenge is can we place these same artworks
-                    in our new home since it has a mountain rustic feel? Trying to figure out where to place our new and
-                    old furnitures, collections and artworks was harder than we thought. We wanted that coveted glossy magazine
-                    look, but it didn't feel right. So, we made changes and designed it based on how we live and what we
-                    love. That worked! Now, we have a home that combines rustic, modern and eclectic collections with a touch
-                    of balance and harmony. Happy designing!
-                </h2>
+
+                <h5> Before my family and I moved to Colorado, we had a collection of Asian and African arts throughout our old
+                    house in California. One of the challenges I ran into was - can I still use the artworks we already have
+                    and still maintain that rustic mountain look? Trying to figure out where to place our old collections
+                    and artworks was harder than I thought. I wanted that glossy magazine look, but it didn't feel right.
+                    So, I made changes and designed it based on how we live and what we love. That worked! Now, we have a
+                    home that combines rustic, modern, and eclectic collections. Not to mention a touch of balance and harmony.
+                    Happy designing!
+                </h5>
             </div>
         </div>
     </section>
@@ -372,41 +356,6 @@
     <script src="js/stylish-portfolio.min.js"></script>
     <!-- Custom Script -->
     <script src="js/view.js" type="text/javascript"></script>
-
-    <!-- Javascript search from Javascript & Jquery Jon Duckett -->
-    <script>
-        (function () {
-            var $imgs = $('#gallery img');
-            var $search = $('#filter-search');
-            var cache = [];
-
-            $imgs.each(function () {
-                cache.push({
-                    element: this,
-                    text: this.alt.trim().toLowerCase()
-                });
-            });
-
-            function filter() {
-                var query = this.value.trim().toLowerCase();
-
-                cache.forEach(function (img) {
-                    var index = 0;
-                    if (query) {
-                        index = img.text.indexOf(query);
-                    }
-
-                    img.element.style.display = index === -1 ? 'none' : '';
-                });
-            }
-
-            if ('oninput' in $search[0]) {
-                $search.on('input', filter);
-            } else {
-                $search.on('keyup', filter);
-            }
-        }());
-    </script>
 
 </body>
 
